5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1672_2167.log
== TEST (2019-04-28 20:55:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= float(input("Digite a cidade: "))
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
else:
	mensagem="650.0"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:56:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
else:
	mensagem="650.0"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:56:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
else:
	mensagem="650.0"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:57:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="Ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:59:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="Ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="Ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="Ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:59:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="Ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="Ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="Ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:04:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="Ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="Ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="Ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="Ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="Ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="Ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="Ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="Ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="Ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="Ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="Ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:05:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="Ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="Ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="Ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="Ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="Ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="Ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="Ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="Ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="Ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="Ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="Ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)
	
	
-- EXECUTION TIME:
0.134732
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:

-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:

-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:05:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="Ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="Ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="Ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="Ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="Ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="Ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="Ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="Ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="Ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="Ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="Ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:05:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="Ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="Ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="Ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="Ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="Ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="Ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="Ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="Ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="Ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="Ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="Ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="Ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n= float(input())
ValueError: could not convert string to float: 'Manaus'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:09:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:09:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:09:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:09:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n=="Belem" and p=="ida"):
	mensagem="350.0"
	print(mensagem)
elif(n=="Belem" and p=="ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
	
	
-- EXECUTION TIME:
0.129137
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
Destino inexistente
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
Destino inexistente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:11:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
elif(n=="Belem" and p=="ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)

	
	
-- ERROR:
File "XXXX", line 12
    elif(n=="Belem" and p=="ida-e-volta"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:12:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
		elif(n=="Belem" and p=="ida-e-volta"):
			mensagem="650.0"
			print(mensagem)
			if(n=="Borba" and p=="ida"):
				mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)

	
	
-- ERROR:
File "XXXX", line 12
    elif(n=="Belem" and p=="ida-e-volta"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:12:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
elif(n=="Belem" and p=="ida-e-volta"):
	mensagem="650.0"
	print(mensagem)
if(n=="Borba" and p=="ida"):
	mensagem="80.0"
	print(mensagem)
elif(n=="Borba" and p=="ida-e-volta"):
	mensagem="152.0"
	print(mensagem)
if(n=="Coari" and p=="ida"):
	mensagem="106.0"
	print(mensagem)
elif(n=="Coari" and p=="ida-e-volta"):
	mensagem="199.0"
	print(mensagem)
if(n=="Humaita" and p=="ida"):
	mensagem="200.0"
	print(mensagem)
elif(n=="Humaita" and p=="ida-e-volta"):
	mensagem="390.0"
	print(mensagem)
if(n=="Manicore" and p=="ida"):
	mensagem="150.0"
	print(mensagem)
elif(n=="Manicore" and p=="ida-e-volta"):
	mensagem="280.0"
	print(mensagem)
if(n=="Maues" and p=="ida"):
	mensagem="100.0"
	print(mensagem)
elif(n=="Maues" and p=="ida-e-vinda"):
	mensagem="190.0"
	print(mensagem)

	
	
-- ERROR:
File "XXXX", line 12
    elif(n=="Belem" and p=="ida-e-volta"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:14:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:14:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- EXECUTION TIME:
0.153487
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
Destino inexistente
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
Destino inexistente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:15:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:15:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:16:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem=float(199.0)
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:16:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:17:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:17:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and "Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:17:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and n!="Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:17:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and n!="Borba" and "Coari" and "Humaita" and "Manicore" and "Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:18:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and n!="Borba" and n!="Coari" and n!="Humaita" and n!="Manicore" and n!="Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:18:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and n!="Borba" and n!="Coari" and n!="Humaita" and n!="Manicore" and n!="Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- EXECUTION TIME:
0.258103
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:18:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n= input("Digite a cidade: ")
p= input("Digite o percurso: ")
if(n!="Belem" and n!="Borba" and n!="Coari" and n!="Humaita" and n!="Manicore" and n!="Maues"):
	mensagem="Destino inexistente"
	print(mensagem)
else:
	if(n=="Belem" and p=="ida"):
		mensagem="350.0"
		print(mensagem)
	elif(n=="Belem" and p=="ida-e-volta"):
		mensagem="650.0"
		print(mensagem)
	if(n=="Borba" and p=="ida"):
		mensagem="80.0"
		print(mensagem)
	elif(n=="Borba" and p=="ida-e-volta"):
		mensagem="152.0"
		print(mensagem)
	if(n=="Coari" and p=="ida"):
		mensagem="106.0"
		print(mensagem)
	elif(n=="Coari" and p=="ida-e-volta"):
		mensagem="199.0"
		print(mensagem)
	if(n=="Humaita" and p=="ida"):
		mensagem="200.0"
		print(mensagem)
	elif(n=="Humaita" and p=="ida-e-volta"):
		mensagem="390.0"
		print(mensagem)
	if(n=="Manicore" and p=="ida"):
		mensagem="150.0"
		print(mensagem)
	elif(n=="Manicore" and p=="ida-e-volta"):
		mensagem="280.0"
		print(mensagem)
	if(n=="Maues" and p=="ida"):
		mensagem="100.0"
		print(mensagem)
	elif(n=="Maues" and p=="ida-e-vinda"):
		mensagem="190.0"
		print(mensagem)

	
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
